# AndProxyDemo

./: README.md  README_en.md  settings.gradle.kts
AndProxy/: build.gradle.kts
AndProxy/src/androidTest/java/com/gumuluo/proxy/: BinderInterceptorTest.java  ExampleInstrumentedTest.java  SvcInterceptorTest.java
AndProxy/src/main/cpp/: BinderHook.cpp  BinderHook.h  BinderProxy.cpp  CMakeLists.txt  SvcInterceptor.cpp  binder_proxy.cpp  binder_proxy.h  log.h  seccomp_hook.cpp  seccomp_hook.h
AndProxy/src/main/java/com/gumuluo/proxy/: HookRequest.java  HookResponse.java  SvcInterceptor.java
AndProxy/src/main/java/com/gumuluo/proxy/binder/: BinderDispatcher.java  BinderInterceptor.java  BinderProxy.java
AndProxy/src/test/java/com/gumuluo/proxy/: ExampleUnitTest.java
GlossHook/: build.gradle.kts
GlossHook/src/androidTest/java/com/gumuluo/glosshook/: ExampleInstrumentedTest.java
GlossHook/src/main/cpp/: CMakeLists.txt
GlossHook/src/test/java/com/gumuluo/glosshook/: ExampleUnitTest.java
app/: build.gradle.kts
app/src/androidTest/java/com/gumuluo/testapp/: ExampleInstrumentedTest.kt
app/src/main/java/com/gumuluo/testapp/: CacheHandling.java  MainActivity.kt
app/src/main/java/com/gumuluo/testapp/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/test/java/com/gumuluo/testapp/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
